Button: add transparent type, fix hover+active state, fix flicker
flicker was caused by will-change: transform. there's no point in using it here, it uses extra resources for no reason.

also updated the demo page and api docs to reflect the addition of a transparent button type.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -197,19 +197,22 @@ button,
     --size: 38px;
 
     color: var(--primary);
-    background-color: var(--helium-elevated-7);
+    background-color: transparent;
     font-size: 16px;
     min-height: 38px;
     padding: 9px 16px;
     border-radius: calc(var(--size) / 2);
     transition: 0.2s background-color, 0.2s transform, 0.2s opacity;
-    will-change: transform;
     display: inline-flex;
     align-items: center;
     gap: 7px;
     user-select: none;
     -webkit-user-select: none;
     -webkit-user-drag: none;
+
+    &:not(.transparent) {
+        background-color: var(--helium-elevated-7);
+    }
 
     &:active {
         background-color: var(--helium-elevated-15);
@@ -256,8 +259,11 @@ button,
 
     &:disabled {
         color: var(--tertiary);
-        background-color: var(--helium-elevated-5);
         pointer-events: none;
+
+        &:not(.transparent) {
+            background-color: var(--helium-elevated-5);
+        }
 
         &:not(.selected) {
             box-shadow: none;
@@ -282,9 +288,19 @@ button,
         background-color: var(--helium-elevated-10);
     }
 
+    button:hover:active,
+    .button:hover:active {
+        background-color: var(--helium-elevated-15);
+    }
+
     button.primary:hover,
     .button.primary:hover {
         background-color: var(--helium-blue-hover);
+    }
+
+    button.primary:hover:active,
+    .button.primary:hover:active {
+        background-color: var(--helium-blue-press);
     }
 }
 
